--- a/QC_Report.Rmd
+++ b/QC_Report.Rmd
@@ -99,7 +99,7 @@ This report provides descriptive information for raw and quality controlled meta
 The quality control workflow is as follows:
 
 ```{r QC-pipeline-flowdiagram, echo=FALSE, out.width='40%'}
-knitr::include_graphics("images/MetaboQC_workflow.png")
+knitr::include_graphics("https://raw.githubusercontent.com/MRCIEU/MetaboQC/master/images/MetaboQC_workflow.png")
 ```
 
 1. Issues can be raised on [GitHub](https://github.com/MRCIEU/MetaboQC/issues). 
