--- a/QC_Report.Rmd
+++ b/QC_Report.Rmd
@@ -3,6 +3,7 @@ title: "Metabolomics QC Report"
 date: "`r Sys.Date()`"
 output: 
   pdf_document:
+    pandoc_args: ["--extract-media", "."]
     number_sections: true
     toc: false
     toc_depth: 2
@@ -82,8 +83,11 @@ The quality control workflow is as follows:
 
 ```{r QC-pipeline-flowdiagram, echo=FALSE, out.width='40%'}
 # knitr::include_graphics("images/MetaboQC_workflow.png")
-knitr::include_graphics("https://raw.githubusercontent.com/MRCIEU/MetaboQC/master/images/MetaboQC_workflow.png")
+# knitr::include_graphics("https://raw.githubusercontent.com/MRCIEU/MetaboQC/master/images/MetaboQC_workflow.png")
+#![]("https://raw.githubusercontent.com/MRCIEU/MetaboQC/master/images/MetaboQC_workflow.png")
+#<a href=“my_link”>my text</a>
 ```
+![]("https://raw.githubusercontent.com/MRCIEU/MetaboQC/master/images/MetaboQC_workflow.png")
 
 1. Issues can be raised on [GitHub](https://github.com/MRCIEU/MetaboQC/issues). 
 2. Questions relating to the `MetaboQC` pipeline can be directed to [David Hughes](mailto:d.a.hughes@bristol.ac.uk).
@@ -593,7 +597,7 @@ if( length(w) > 0 ){
   w = which( apply( qc_data$sample_data[,matched_variables], 2, function(x){  length(table(x)) }) < 97 )
   matched_variables = matched_variables[w]
   
-  batch_variables = matched_variables[w]
+  batch_variables = matched_variables
 } else {
   batch_variables = NA
 }
